syntax = 'proto3';

package Greeting;
option go_package = "github.com/ryantokmanmokmtm/gRPC-Unary";

service Greeting {
  rpc SayHello(GreetingRequest) returns (GreetingResponse);
  rpc sum_up(SumRequest) returns (SumResponse);
}

message GreetingRequest{
  string your_name = 1;
}

message GreetingResponse{
  string result = 1;
}

message SumRequest{
  int32 sumA = 1;
  int32 sumB = 2;
}

message SumResponse{
  int32 result = 1;
}